name:               FunFS
version:            0.1.0.0
synopsis:           Demo Ext2 filesystem implementation in Haskell
description:		FunFS is a lazy-evaluated, functional implementation of the Ext2 filesystem in Haskell.
license:            MIT
license-file:       LICENSE
author:             Chris Swinchatt
maintainer:         c.swinchatt1@uni.brighton.ac.uk
copyright:          (c) 2017 Christopher Swinchatt
category:           Data
build-type:         Simple
extra-source-files: ChangeLog.md
cabal-version:      >=1.10

library
    exposed-modules:  Data.FileSystem.FunFS
                    , Data.FileSystem.FunFS.API
                    , Data.FileSystem.FunFS.API.Directory
                    , Data.FileSystem.FunFS.API.File
                    , Data.FileSystem.FunFS.API.FileSystem
                    , Data.FileSystem.FunFS.API.Handle
                    , Data.FileSystem.FunFS.API.HandleInfo
                    , Data.FileSystem.FunFS.API.Mount
                    , Data.FileSystem.FunFS.API.NodeType
                    , Data.FileSystem.FunFS.API.OpenMode
                    , Data.FileSystem.FunFS.API.Path
                    , Data.FileSystem.FunFS.API.Permission
                    , Data.FileSystem.FunFS.API.Seek
                    , Data.FileSystem.FunFS.API.User
                    ,  Data.FileSystem.FunFS.Ext2
                    , Data.FileSystem.FunFS.Ext2.LowLevel.Block
                    , Data.FileSystem.FunFS.Ext2.LowLevel.BlockGroupDescriptor
                    , Data.FileSystem.FunFS.Ext2.LowLevel.Inode
                    , Data.FileSystem.FunFS.Ext2.LowLevel.LinkedDirectory
                    , Data.FileSystem.FunFS.Ext2.LowLevel.Struct
                    , Data.FileSystem.FunFS.Ext2.LowLevel.SuperBlock
                    , Data.FileSystem.FunFS.Ext2.Conf
                    , Data.FileSystem.FunFS.Ext2.Directory
                    , Data.FileSystem.FunFS.Ext2.DirEntry
                    , Data.FileSystem.FunFS.Ext2.Node
                    , Data.FileSystem.FunFS.Ext2.NodeType
                    , Data.FileSystem.FunFS.Ext2.Path
                    , Data.FileSystem.FunFS.Ext2.User
                    , Data.FileSystem.FunFS.Ext2.Volume
                    , Data.FileSystem.FunFS.Util.Bits
                    , Data.FileSystem.FunFS.Util.Bytes
                    , Data.FileSystem.FunFS.Util.Serialisable
                    , Data.FileSystem.FunFS.Util.SizeOf
                    , Data.FileSystem.FunFS.Util.Strings
                    , Data.FileSystem.FunFS.Util.Time
                    , Data.FileSystem.FunFS.Util.UUID
    build-depends:      ghc >= 7.2.1
                      , base >=4.9 && <4.10
                      , binary >= 0.8.3 && < 0.9
                      , bytestring >= 0.10.8.1 && < 0.11
                      , mtl >=2.2 && <2.3
                      , template-haskell >= 2.11 && < 2.12
                      , time >= 1.6.0.1 && < 1.7
                      , transformers >= 0.5.2 && <= 0.6
                      , uuid >= 1.2.2
    hs-source-dirs:     src
    default-language:   Haskell2010

-- EXAMPLES --
executable mount
    build-depends:      ghc >= 7.2.1, base >= 4.8 && < 4.10, FunFS >= 0.1
    hs-source-dirs:     examples/Example0_Mount
    main-is:            Main.hs
    default-language:   Haskell2010

executable readdir
    build-depends:      ghc >= 7.2.1, base >= 4.8 && < 4.10, FunFS >= 0.1
    hs-source-dirs:     examples/Example1_ReadDir
    main-is:            Main.hs
    default-language:   Haskell2010

executable readfile
    build-depends:      ghc >= 7.2.1, base >= 4.8 && < 4.10, FunFS >= 0.1, bytestring >= 0.10
    hs-source-dirs:     examples/Example2_ReadFile
    main-is:            Main.hs
    default-language:   Haskell2010

-- TESTS --
executable units
    build-depends:      ghc >= 7.2.1, base >= 4.8 && < 4.10, FunFS >= 0.1, bytestring >= 0.10, QuickCheck >= 2.9.2 && < 2.10
    hs-source-dirs:     tests/UnitTests
    main-is:            Main.hs
    default-language:   Haskell2010
